--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "NimbusU-UI"]
 	path = NimbusU-UI
 	url = git@github.com:SureshAmal/NimbusU-UI.git
+[submodule "NimbusU-backend"]
+	path = NimbusU-backend
+	url = git@github.com:SureshAmal/NimbusU-backend.git
